# halo2-playground

./: Cargo.toml
src/: lib.rs
